--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -183,8 +183,8 @@ footer {
 @media (max-width: 767px) {
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
-        height: 350px;
-         width: 100%;
+        height: 50%;
+        width: 800px;
     }
 }
 
@@ -192,8 +192,8 @@ footer {
 @media (max-width: 991px) and (min-width: 768px) {
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
-        height: 400px;
-        width: 100%;
+        height: 50%;
+        width: 1000px;
     }
 }
 
@@ -202,7 +202,7 @@ footer {
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
         height: 500px;
-        width: 100%;
+        width: 1024px;
     }
 }
 
@@ -211,6 +211,6 @@ footer {
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
         height: 600px;
-        width: 100%;
+        width: 1900px;
     }
 }
