--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -187,11 +187,10 @@ footer {
         width: 800px;
     }
     .navbar-brand >img {
-            visibility: hidden;
-            width:40px;
-            height:40px;
+            width:50px;
+            height:50px;
             position: absolute;
-            right: 80px;
+            left: 0px;
             top:0px;
             z-index:-1;
     }
@@ -205,8 +204,8 @@ footer {
         width: 1000px;
     }
     .navbar-brand >img {
-            width:60px;
-            height:60px;
+            width:80x;
+            height:80px;
             position: absolute;
             right: 100px;
             z-index:-1;
